kubernetes-deploy/op-connect-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: op-connect-local
  labels:
    istio-injection: enabled
