kubernetes-deploy/op-connect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-connect
  namespace: op-connect-local
spec:
  selector:
    matchLabels:
      app: op-connect
      namespace: op-connect-local
  template:
    metadata:
      labels:
        app: op-connect
        namespace: op-connect-local
        version: "1.5.2"
    spec:
      serviceAccount: op-connect
      volumes:
        - name: shared-data
          emptyDir: {}
        - name: credentials
          secret:
            secretName: credentials
      containers:
        - name: connect-api
          image: 1password/connect-api:1.5.2
          resources:
            limits:
              memory: "128Mi"
              cpu: "0.2"
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /home/opuser/.op/data
              name: shared-data
            - mountPath: /home/opuser/.config
              name: credentials
              readOnly: true
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
        - name: connect-sync
          image: 1password/connect-sync:1.5.2
          resources:
            limits:
              memory: "128Mi"
              cpu: "0.2"
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /home/opuser/.op/data
              name: shared-data
            - mountPath: /home/opuser/.config
              name: credentials
              readOnly: true
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
