kubernetes-deploy/op-connect-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: op-connect
  namespace: op-connect-local
spec:
  selector:
    app: op-connect
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    # - name: connect-sync
    #   port: 8081
